--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Valentine :)</title>
+    <title>с ДСВ!! :)</title>
     <link
       rel="stylesheet"
     />
@@ -16,43 +16,43 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
-          <span id="name">xyz</span>
+          эй,
+          <span id="name">ОКАСАНА!</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
+        <p class="two" id="greetingText">..известная так же как "моя сладкая булочка"...</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>сегодня Валентинов День!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            с ДСВ! :)) люблю, скучаю.. итп.. бла-бла-бла 
           </p>
           <p class="fake-btn">Send</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">That's what I was going to do.</p>
-        <p class="idea-2">But then I stopped.</p>
+        <p class="idea-1">вот что я собирался сделать..</p>
+        <p class="idea-2">но потом подумал</p>
         <p class="idea-3">
-          I realised, I wanted to do something <strong>special</strong>.
+          и понял, что хотел бы сделать что-то<strong>особенное</strong>.
         </p>
-        <p class="idea-4">Because,</p>
+        <p class="idea-4">потому что,</p>
         <p class="idea-5">
-          You are Special
+          ты особенная
           <span>:)</span>
         </p>
         <p class="idea-6">
-          <span>S</span>
-          <span>O</span>
+          <span>ТАК </span>
+          <span>ЧТООО</span>
         </p>
       </div>
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h3 class="wish-hbd">с Валентиновым Днём, дорогая 💖</h3>
+          <h5 id="wishText">жду когда увидимся, скучаю каждый день, обнимаю</h5>
         </div>
       </div>
       <div class="seven">
@@ -124,8 +124,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
-        <p id="replay">Or click, if you want to watch it again.</p>
+        <p>идею открытки я конечно спёр, но надеюсь, тебе она всеравно понравилась :3</p>
+        <p id="replay">можешь кликнуть на смайлик, чтоб снова посмотреть</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
