--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">с Валентиновым Днём, дорогая! &#128150;</h3>
+          <h3 class="wish-hbd">с Валентиновым Днём, дорогая! <img src="img/heart.svg" /></h3>
           <h5 id="wishText">жду когда увидимся, скучаю каждый день, обнимаю</h5>
         </div>
       </div>
