--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="hbd-chatbox">
             с ДСВ! :)) люблю, скучаю.. итп.. бла-бла-бла 
           </p>
-          <p class="fake-btn">Send</p>
+          <p class="fake-btn">ОТПРАВИТЬ</p>
         </div>
       </div>
       <div class="five">
@@ -51,8 +51,8 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">с Валентиновым Днём, дорогая! <img src="img/heart.svg" /></h3>
-          <h5 id="wishText">жду когда увидимся, скучаю каждый день, обнимаю</h5>
+          <h3 class="wish-hbd">с Днём Святого Валенитина, дорогая! :D</h3>
+          <h5 id="wishText">жду когда увидимся, скучаю каждый день, обнимаю (как могу)</h5>
         </div>
       </div>
       <div class="seven">
