--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="nine">
         <p>идею открытки я конечно спёр, но надеюсь, тебе она всеравно понравилась :3</p>
-        <p id="replay">можешь кликнуть на смайлик, чтоб снова посмотреть</p>
+        <p id="replay">можешь кликнуть сюда, чтоб снова посмотреть</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
